@@ -9,6 +9,7 @@ Improvements:
  - Display repository references in the sorted order: tags, heads,
    tracked remotes, remotes.
  - Add bash completion for blame.
+ - Tree view: edit files of the current branch.
 
 Bug fixes:
 
